# J2

./: .dir-locals.el  .gitignore  .gitmodules  .ignore  ClangBuildAnalyzer.ini  README.md  meson.build  meson_options.txt
doc/: air.md  arch-notes.md  cc.md  cir.md  dwarf-notes.md  ir-notes.md  lisp-package.dot  lisp.md  packages.md  passes.md  term-rewriting-notes.md  term-rewriting.md
pch/: j_test_pch.hpp  microbench_pch.hpp
res/: box_renderer.frag  box_renderer.vert  color_space_preview.frag  color_space_slider.frag  color_space_slider.vert  quad.frag  quad.vert  quad_grid.vert  text_renderer.frag  text_renderer.vert
res/air/: children.air  debug_attrs.air  expr_debug_format.air  expr_init_data.air  expr_size_data.air  expr_structs.air  expr_type.air  graphviz_format.air  layout_debug.air  main.air  parser.air  templates.air  test_grammar.air  tests.air  trs_write_expr.air  types.air  visit.air  write_expr.air
sphinx/source/: conf.py  index.rst
src/: j_lib_pch.hpp  main.cpp
src/algo/: comparer.hpp  copy.hpp  destroy.hpp  find.hpp  for_each.hpp  is_sorted.hpp  quicksort.hpp  spans.hpp
src/ansi/: ascii_codes.hpp  sgr.hpp  sgr_styled_sink.cpp  sgr_styled_sink.hpp
src/application/: information.hpp
src/attributes/: attribute.hpp  attribute_definition.hpp  attribute_map.cpp  attribute_map.hpp  attributes.hpp  basic_operations.hpp  common.hpp  enable_if_attributes.hpp  foreach.hpp  keyed_attributes.hpp  map_detail.hpp  trivial_array.hpp  value_handler.hpp
src/backtrace/: backtrace.cpp  backtrace.hpp  dump_backtrace.cpp  dump_backtrace.hpp  stack_frame.hpp  stored_backtrace.cpp  stored_backtrace.hpp
src/bits/: bitmask.hpp  bitmask_common.hpp  bitmask_iterator_with_offset.hpp  bitmask_iterator_without_offset.hpp  bitops.hpp  bitset.hpp  bitvector.hpp  fixed_bitset.hpp  fixed_bitset_hash.hpp  fixed_bitset_refinement.hpp  static_bitset.hpp
src/cli/: application.cpp  application.hpp  argument_definition.hpp  arguments.cpp  arguments.hpp  callback.hpp  cli.hpp  cli_configuration_pass.cpp  cli_configuration_pass.hpp  command.cpp  command.hpp  command_definition.cpp  command_definition.hpp  common_attributes.hpp  help_command.cpp  metadata.hpp  parse.cpp  parse.hpp
src/colors/: ansi.hpp  color.hpp  color_registry.cpp  color_registry.hpp  default_colors.hpp  lab.hpp  lms.hpp  rgb.cpp  rgb.hpp  srgb.hpp  xyz.hpp
src/commands/: dump_cir.cpp  meta.cpp  repl.cpp  termpaint_test.cpp  test_color_spaces.cpp  test_elf.cpp  test_heap.cpp  test_regex.cpp
src/containers/: common.cpp  common.hpp  compare_fn.hpp  deque.hpp  deque_fwd.hpp  dlist.hpp  hash.hpp  hash_map.cpp  hash_map.hpp  hash_map_fwd.hpp  inline_array.hpp  inline_array_fwd.hpp  obstack.cpp  obstack.hpp  obstack_fwd.hpp  pair.hpp  pile.hpp  ptr_set.cpp  ptr_set.hpp  sbo.hpp  span.hpp  stack.hpp  static_array.hpp  static_vector.hpp  strided_span.hpp  trivial_array.hpp  trivial_array_fwd.hpp  unsorted_string_map.hpp  unsorted_string_map_fwd.hpp  vector.hpp
src/debug/: common.hpp  counters.cpp  counters.hpp  timing.cpp  timing.hpp
src/events/: assert.cpp  assert.hpp  common.hpp  debug_formatters.cpp  event_loop.cpp  event_loop.hpp  events.hpp  handle.cpp  handle.hpp  poll_handle.cpp  poll_handle.hpp  prepare_handle.cpp  prepare_handle.hpp  request_queue.cpp  request_queue.hpp  requests.cpp  requests.hpp  signal_handle.cpp  signal_handle.hpp  stream_handle.cpp  stream_handle.hpp
src/exceptions/: assert.hpp  assert_lite.hpp  backtrace.hpp  exceptions.cpp  exceptions.hpp  formatters.cpp  formatters.hpp  terminate_handler.cpp
src/files/: formatters.cpp  fs.cpp  fs.hpp  memory_mapping.cpp  ofile.cpp  (+3 more)
test/: meson.build
test/attributes/: keyed.cpp
test/bits/: bitmask.cpp  bitops.cpp  bitset.cpp  fixed_bitset.cpp
test/color/: serialization.cpp  transforms.cpp
test/containers/: avl_tree.cpp  deque.cpp  hash_map.cpp  rope_tree.cpp
test/detail/: exceptions.cpp  nontrivial.cpp  nontrivial.hpp  stringify.cpp  stringify.hpp  stringify_geometry.hpp  temp_file.cpp  temp_file.hpp
test/fixtures/: closure-loop.j
test/hzd/: crc32.cpp
test/lisp/: reader.cpp
test/lisp/air/: trs.cpp
test/lisp/asm_parser/: asm_types.hpp
test/lisp/assembly/: arith_bin.asm  bt.asm  call_ret.asm  common.hpp  emit_arith_bin.cpp  emit_bt.cpp  emit_fp_convert.cpp  emit_fp_ops.cpp  emit_jcc.cpp  emit_jmp.cpp  emit_lea.cpp  emit_mov.cpp  emit_movd_movq.cpp  emit_movsxzx.cpp  emit_not_neg.cpp  emit_pop.cpp  emit_push.cpp  emit_ret.cpp  emit_setcc.cpp  emit_shiftd.cpp  emit_shifts.cpp  fp_convert.asm  fp_ops.asm  jcc.asm  jmp.asm  lea.asm  macros.mac  mov.asm  mov_imm.asm  mov_index.asm  mov_rip.asm  movd_movq.asm  movsxzx.asm  not_neg.asm  pop.asm  push.asm  setcc.asm  shiftd.asm  shifts.asm
test/lisp/cir/: single_ops.hpp
test/lisp/compilation/: arithmetic.cpp  closures.cpp  compilation.cpp  utils.cpp  utils.hpp  vecs.cpp
test/math/: fixed.cpp  interval.cpp
test/mem/: ring_buffer.cpp
test/properties/: bitmask_set.cpp  bool_access.cpp  conversions.cpp  enum_access.cpp  float_access.cpp  int_access.cpp  list_access.cpp  map_access.cpp  metadata.cpp  object_access.cpp  path_to_string.cpp  set_access.cpp  string_access.cpp  variant.cpp  variant_access.cpp  visit.cpp  visit_definition.cpp  visit_path_to_string.cpp  visit_recursive.cpp
test/rendering/: get_vertex_attribute_format.cpp
test/serialization/: yaml.cpp
test/strings/: egc.hpp  equality.cpp  format_integer.cpp  format_string_iterator.cpp  landmark.cpp  lbr.hpp  markers.cpp  placeholder.cpp  rope_view.cpp  string.cpp  styled_string.cpp  utf8.cpp  utf8_rope.cpp  utf8_rope2.cpp  utf8_rope_egc.cpp  utf8_rope_lbr.cpp  utf8_rope_lbr_edit.cpp
test/ui/: linear_layout.cpp
test/util/: hex.cpp
tools/: clang-tidy.yaml  gen.jq  run-clang-tidy.sh  run-dump-cir.sh  spirv.jq  spirv_enums.jq  spirv_formatters.jq  spirv_instructions.jq  spirv_types.jq  ucd_utils.py  unicode_east_asian_width.py  unicode_east_asian_width_test.py  unicode_gc.py  unicode_grapheme_break_test.py  unicode_line_break.py  unicode_line_break_prop_test.py  unicode_line_break_test.py  unicode_properties.py
(+1470 files in other folders)
